syntax = "proto3";
package product;
service ProductService {
  rpc CreateProduct (ProductRequest) returns (ProductResponse) {}
  rpc FindProduct (ProductRequest) returns (ProductResponse) {}
  rpc RemoveProduct (ProductRequest) returns (ProductResponse) {}
}
message ProductRequest {
  string id = 1;
  string name = 2;
}
message ProductResponse {
  int32 code = 1;
  string msg = 2;
}